# MNN_Runner

./: .gitignore  AGENTS.md  README.md  pubspec.yaml
.github/workflows/: android-release.yml  screenshot.yml
android/: gradle.properties  gradle.properties.bak
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  mnn_runner.cpp
android/app/src/main/kotlin/com/mnn/runner/mnn_runner_app/: MainActivity.kt  NativeBridge.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml
docs/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: json_viewer.dart  main.dart
lib/util/: color_compat.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: build_release.sh  install_jdk21.sh  push_libs.sh  screenshot_android.sh  setup_mnn_android.sh
test/: generate_screenshot_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
